==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

 - Expose fields for ``information_schema.columns`` and
   ``information_schema.tables`` so that it conforms to SQL-99 standard.

 - Extended the output of the  ``EXPLAIN`` statement.

 - Added support for joins on virtual tables.

Fixes
=====

 - Added missing table setting ``translog.durability`` which is required and
   and must be set accordingly so that ``translog.sync_interval`` takes effect.

 - Fixed a NPE when querying ``sys.shards`` table

 - Log failed authentication attempts at log level ``WARN``