@@ -28,6 +28,10 @@ Changes
 Fixes
 =====
 
+ - Reflect internally used default size for ``translog.flush_threshold_size``
+   also in documentation and expose the correct default value in table
+   settings.
+
  - Added missing table setting ``translog.durability`` which is required and
    and must be set accordingly so that ``translog.sync_interval`` takes effect.
 
